--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
   },
   "bin": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --unhandled-rejections=strict src"
+  },
+  "devDependencies": {
+    "@types/node": "13.9.0",
+    "@types/node-fetch": "2.5.5",
+    "@types/yauzl": "2.9.1"
+  },
+  "dependencies": {
+    "node-fetch": "2.6.0",
+    "validate-npm-package-name": "3.0.0",
+    "yauzl": "2.10.0"
   }
 }
