--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "bin": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --unhandled-rejections=strict src"
+    "start": "node --unhandled-rejections=strict src",
+    "postpublish": "git push --follow-tags"
   },
   "devDependencies": {
     "@types/node": "13.9.0",
