--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-package-javascript",
-  "version": "0.1.1-0",
+  "version": "0.1.1",
   "description": "Utility to create npm packages",
   "author": "Dima Parzhitsky <parzhitsky@gmail.com>",
   "license": "MIT",
