--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/yauzl": "2.9.1"
   },
   "dependencies": {
+    "commander": "4.1.1",
     "node-fetch": "2.6.0",
     "validate-npm-package-name": "3.0.0",
     "yauzl": "2.10.0"
