--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
     "prepublishOnly": "npm run build -- --noEmit",
     "postpublish": "git push --follow-tags"
   },
-  "devDependencies": {
+  "dependencies": {
     "@types/node": "13.9.0",
     "@types/node-fetch": "2.5.5",
     "@types/validate-npm-package-name": "3.0.0",
     "@types/yauzl": "2.9.1",
-    "typescript": "3.8.3"
-  },
-  "dependencies": {
     "commander": "4.1.1",
     "node-fetch": "2.6.0",
     "ts-node": "8.6.2",
+    "typescript": "3.8.3",
     "validate-npm-package-name": "3.0.0",
     "yauzl": "2.10.0"
   }
